V3.1.2:
 - Projection subtomograms uses alignment information
V3.1.1:
 - First released version of the plugin documented properly in this file. The plugin contains the following 23 protocols:

   xmipptomo - align transformations ( XmippProtAlignTransform ):
      Protocol to rotate a series of alignments to a common reference defined by a
      Subtomogram Average

   xmipptomo - apply alignment subtomo ( XmippProtApplyTransformSubtomo ):
      Apply alignment matrix and produce a new setOfSubtomograms, with each subtomogram aligned to its reference.

   xmipptomo - apply alignment tilt-series ( XmippProtApplyTransformationMatrixTS ):
      Compute the interpolated tilt-series from its transform matrix.

   xmipptomo - connected components to ROIs ( XmippProtCCroi ):
      This protocol adjust a SetOfCoordinates (which usually will come from a
      connected componnent) to a ROI (region of interest) previously defined

   xmipptomo - cltomo ( XmippProtCLTomo ):
      Averages a set of subtomograms taking into account the missing edge.

   xmipptomo - connected components ( XmippProtConnectedComponents ):
      This protocol takes a set of coordinates and identifies connected
      components among the picked particles.

   xmipptomo - crop tomograms ( XmippProtCropTomograms ):
      Protocol to crop tomograms using xmipp_transform_window.
      The protocol allows to change the size of a tomogram/s, by removing the
      borders defined by the users

   xmipptomo - Filter coordinates by map ( XmippProtFilterCoordinatesByMap ):
      Filter coordinate by map both given a mask or a resolucion map from a tomogram

   xmipptomo - fit vesicles ( XmippProtFitEllipsoid ):
      This protocol adjust a SetOfSubtomograms with coordinates assigned or a SetOfCoordinates3D, to a vesicle
      (ellipsoid), defining regions of interest (SetOfMeshes) for each vesicle as output.

   xmipptomo - half maps ( XmippProtHalfMapsSubtomo ):